# demo-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  demo.py  pyproject.toml  requirements.txt  ztinfra-service.yaml
.github/workflows/: rebuild-verify.yml  release-enclave.yml
scripts/: build-coco-image.sh  build-enclave.sh
src/: server.py
tests/: test_response_signing.py
tools/: generate_coco_artifacts.py  generate_provenance.py  generate_release_manifest.py  install-nitro-cli.sh  rebuild-verify.sh  render_facts_row.py  upsert_facts_db.py  verify_coco_release.py
