[project]
name = "micrus"
version = "0.1.0"
description = "Python attestation demo service packaged as the measured enclave workload for ZTBrowser."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask==3.1.0",
  "Werkzeug==3.1.3",
  "cbor2==5.6.5",
  "cryptography==44.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
